添加readme.md文件,记录从头配置流程

--- a/xela_linx/xServ.ini
+++ b/xela_linx/xServ.ini
@@ -11,6 +11,8 @@ origins = off #use `on` to turn on
 fps = off #use `on` to show redraw rate of viz
 ups = off #use `on` to show sensor update rate
 temp_show = on #use `off` to disable temperature show (requires temperature enabled sensors to show up, otherwise hidden)
+
+# calibration = on (only required for standard calibration)
 [debug]
 sens_print = full
 [sensor]
